--- a/src/views/css/common.css
+++ b/src/views/css/common.css
@@ -15,28 +15,28 @@ a {
 /* HEADER */
 header {
 	width: 100%;
-	border-bottom: #c8c8c8 solid 1px;
 	position: fixed;
 	top: 0;
 	z-index: 9;
-	background-color: #f6f5f0;
+	background-color: #fff;
 }
 
 header .category {
 }
 header .category .main-menu {
 	display: flex;
+	float: right;
 }
 header .category .main-menu .item {
 	/* display: flex; */
 }
 header .category .main-menu .item .item__name {
-	padding: 10px 20px 20px 20px;
+	padding: 50px 20px;
 	font-size: 16px;
 	font-weight: 700;
 }
 header .category .main-menu .item:hover .item__name {
-	background-color: red;
+	background-color: #c8c8c8;
 	color: white;
 }
 header .category .main-menu .item .item__contents {
@@ -44,9 +44,6 @@ header .category .main-menu .item .item__contents {
 	position: fixed;
 	background-color: red;
 	display: none;
-}
-header .category .main-menu .item:hover .item__contents {
-	display: block;
 }
 header .category .main-menu .item .item__contents > ul {
 }
