--- a/src/views/mypage/mypage.html
+++ b/src/views/mypage/mypage.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>쇼핑-n팀</title>
     <!-- 아이콘 -->
     <link
       rel="icon"
@@ -23,23 +22,66 @@
       src="https://kit.fontawesome.com/7630448495.js"
       crossorigin="anonymous"
     ></script>
+    <!-- 구글 OAuth -->
+    <script src="https://accounts.google.com/gsi/client" async defer></script>
+    <!-- 카카오 OAuth -->
+    <script src="https://developers.kakao.com/sdk/js/kakao.js"></script>
     <!-- 커스텀 css, js -->
     <link rel="stylesheet" href="mypage.css" />
     <script src="mypage.js" type="module" defer></script>
+    <title>쇼핑-n팀</title>
   </head>
   <body>
+    <!-- 헤더 -->
+    <nav class="navbar" role="navigation" aria-label="main navigation">
+      <div class="container mt-3">
+        <div class="navbar-brand">
+          <a class="navbar-item" href="/">
+            <img src="/elice-rabbit.png" width="30" height="30" />
+            <span class="has-text-link">쇼핑-n팀</span>
+          </a>
+
+          <a
+            role="button"
+            class="navbar-burger"
+            aria-label="menu"
+            aria-expanded="false"
+            data-target="navbarBasicExample"
+          >
+            <span aria-hidden="true"></span>
+            <span aria-hidden="true"></span>
+            <span aria-hidden="true"></span>
+          </a>
+        </div>
+
+          <div class="navbar-end breadcrumb my-auto" aria-label="breadcrumbs">
+            <ul id="navbar">
+              <li>
+                <a href="/cart" aria-current="page">
+                  <span class="icon">
+                    <i class="fas fa-cart-shopping"></i>
+                  </span>
+                  <span>카트</span>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </nav>
+    <!-- 계정관리 페이지 블록들 구현 -->
     <section class="section">
       <div class="block account-header">
         <h1 class="title">계정관리</h1>
       </div>
       <div class="menu-container">
-        <a class="menu-card" href="/account/orders">
+        <a class="menu-card" href="/mypage/order">
           <div class="menu-body">
             <p class="title">주문조회</p>
             <p class="subtitle">지난 주문 내역을 확인, 취소할 수 있습니다.</p>
           </div>
         </a>
-        <a class="menu-card" href="../mypage/userinfo">
+        <a class="menu-card" href="/mypage/userinfo">
           <div class="menu-body">
             <p class="title">회원정보 관리</p>
             <p class="subtitle">회원 정보를 확인, 수정할 수 있습니다.</p>
