--- a/src/views/css/common.css
+++ b/src/views/css/common.css
@@ -45,6 +45,68 @@ section {
 .marginbox {
 	margin: 0 2.4%;
 }
+#to-top {
+	width: 44px;
+	height: 44px;
+	border-radius: 50%;
+	background-color: #fff;
+	color: #141414;
+	cursor: pointer;
+	display: flex;
+	font-weight: 700;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	position: fixed;
+	bottom: 30px;
+	right: 30px;
+	z-index: 9;
+	transition: 0.3s;
+	font-size: 1rem;
+}
+#to-top > .md.hydrated {
+	color: #141414;
+	position: fixed;
+	bottom: 41px;
+	right: 40px;
+}
+#to-top:hover > .md.hydrated {
+	color: #fff;
+	position: fixed;
+}
+#to-top:hover {
+	background-color: #141414;
+}
+.btn {
+	max-width: 20rem;
+	border: 1px solid #141414;
+	background-color: #fff;
+	padding: 0 3.2rem;
+	text-transform: capitalize;
+	text-align: center;
+	display: inline-block;
+	color: #141414;
+	font-size: 13px;
+	transition: 0.3s;
+	height: 2.3rem;
+	line-height: 2.3rem;
+	cursor: pointer;
+	box-sizing: border-box;
+	white-space: nowrap;
+}
+.btn:hover {
+	background-color: #141414;
+	color: #fff;
+}
+.btn.btn--gray {
+	border: none;
+	background-color: #e5e5e5;
+	color: #333;
+}
+.btn.btn--gray:hover {
+	background-color: #e5e5e5;
+	color: #333;
+}
 
 /* header */
 header {
@@ -139,6 +201,11 @@ header {
 .sidebar-text {
 	font-size: 16px;
 	padding-left: 26px;
+}
+@media (min-width: 320px) and (max-width: 1020px) {
+	.sidebar-text {
+		display: none;
+	}
 }
 
 /* l NAV */
