--- a/src/views/home/home.css
+++ b/src/views/home/home.css
@@ -72,83 +72,83 @@
 	margin-right: -626px;
 }
 
-/* MAIN-PRODUCT */
+.divvv {
+	position: sticky;
+	width: 100%;
+	height: 50px;
+}
+
+/* main-newproduct */
 .main-product {
-	padding: 80px 0 40px;
+	margin: 0 7.1%;
+	height: 85vh;
+	margin-bottom: 5rem;
 }
-.main-product .title h1 {
-	font-size: 28px;
-	line-height: 1.15;
-	letter-spacing: -0.26px;
-	font-weight: 600;
-	text-align: center;
-}
-.main-product .title h2 {
-	font-size: 16px;
-	line-height: 1.45;
-	letter-spacing: -0.2px;
-	font-weight: 500;
-	text-align: center;
-	color: rgb(153, 153, 153);
-	margin-top: 2px;
-}
-.main-product .container {
+.main-product .inner {
+	width: 100%;
+	height: 100%;
 	display: flex;
-	flex-wrap: wrap;
-	justify-content: center;
+	flex-direction: column;
 	align-items: center;
 }
-.main-product .product-item {
+.main-newproducts {
+	background-image: url('https://images.unsplash.com/flagged/photo-1570733117311-d990c3816c47?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80');
+	background-repeat: no-repeat;
+	background-size: cover;
+	background-position: center;
+	width: 100%;
+	height: 100%;
 	cursor: pointer;
-	margin: 0 10px 60px;
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
 }
-.main-product .product-item #productImage {
-	height: 320px;
-	width: 220px;
+.main-ranking {
+	background-image: url('https://images.unsplash.com/photo-1523950704592-ee4866469b4c?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1664&q=80');
+	background-repeat: no-repeat;
+	background-size: cover;
+	background-position: center;
+	width: 100%;
+	height: 100%;
 	cursor: pointer;
+}
+
+.main-product .btn {
+	margin: 2vh 0 0;
+}
+
+.swiper {
+	width: 100%;
+	height: 100%;
+}
+
+.swiper-slide {
+	text-align: center;
+	font-size: 18px;
+	background: #fff;
+
+	/* Center slide text vertically */
+	display: -webkit-box;
+	display: -ms-flexbox;
+	display: -webkit-flex;
+	display: flex;
+	-webkit-box-pack: center;
+	-ms-flex-pack: center;
+	-webkit-justify-content: center;
+	justify-content: center;
+	-webkit-box-align: center;
+	-ms-flex-align: center;
+	-webkit-align-items: center;
+	align-items: center;
+}
+
+.swiper-slide img {
+	display: block;
+	width: 100%;
+	height: 100%;
 	object-fit: cover;
 }
-.main-product .product-item .description {
-	display: flex;
-	flex-direction: column;
-	padding: 14px 10px 0 0;
-}
-.main-product .product-item .description .detail #seller {
-	font-size: 12px;
-	margin-bottom: 4px;
-	font-weight: 400;
-}
-.main-product .product-item .description .detail #productDescription {
-	font-size: 16px;
-	margin-bottom: 8px;
-	font-weight: 400;
-}
-.main-product .product-item .description .price {
-	font-size: 16px;
-	font-weight: 800;
-}
-.main-product .button {
-	margin: auto;
-	display: block;
+
+.swiper {
+	margin-left: auto;
+	margin-right: auto;
 }
 
 /* FOOTER */
-#to-top {
-	width: 44px;
-	height: 44px;
-	border-radius: 50%;
-	background-color: #fff;
-	color: #333;
-	border: 2px solid #e5e5e5;
-	cursor: pointer;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	position: fixed;
-	bottom: 30px;
-	right: 30px;
-	z-index: 9;
-}
