--- a/src/views/login/login.css
+++ b/src/views/login/login.css
@@ -1,18 +1,102 @@
 .login-form-container {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 85vh;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	padding: 0 35%;
 }
 
 .login-form-box {
-  width: 30rem;
+	width: 30rem;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
 }
 
-.login-form-box .title {
-  text-align: center;
+.login-form-box > p {
+	font-size: 20px;
+	font-weight: 700;
+	display: inline-block;
+	width: 100%;
+	text-align: center;
+	border-bottom: 1px solid #e5e5e5;
+	padding: 5rem 0 2rem;
+}
+.inner {
+	width: 100%;
+}
+.field {
+	width: 100%;
 }
 
-.login-form-box .button {
-  font-weight: bold;
+.label {
+	font-size: 12px;
+}
+
+.control {
+	padding: 0.5rem 0;
+}
+
+.input {
+	width: 100%;
+	border: 1px solid #e5e5e5;
+	padding: 0 1rem;
+	height: 2.3rem;
+	line-height: 2.3rem;
+}
+
+.input:focus {
+	outline: none !important;
+	border: 1px solid #141414;
+	background-color: #fff;
+}
+input:-webkit-autofill {
+	-webkit-box-shadow: 0 0 0 1000px #fff inset;
+}
+.passwordFind {
+	border: none;
+	background-color: #fff;
+	font-size: 12px;
+	font-weight: 700;
+	float: right;
+	padding: 0;
+	cursor: pointer;
+}
+
+.login-form-box > .btn {
+	max-width: 100%;
+	min-width: 100%;
+	margin: 1.5rem;
+}
+.swal-modal {
+	border-radius: 0%;
+}
+.swal-text {
+	font-size: 14px;
+	font-family: 'Nanum Gothic', sans-serif;
+	color: #141414;
+}
+.swal-footer {
+	text-align: center;
+}
+.swal-button {
+	max-width: 20rem;
+	border: 1px solid #141414;
+	background-color: #fff;
+	padding: 0 3.2rem;
+	text-transform: capitalize;
+	text-align: center;
+	display: inline-block;
+	color: #141414;
+	font-size: 13px;
+	transition: 0.3s;
+	height: 2.3rem;
+	line-height: 2.3rem;
+	cursor: pointer;
+	box-sizing: border-box;
+	white-space: nowrap;
+	border-radius: 0%;
+}
+.swal-button:hover {
+	background-color: #141414;
+	color: #fff;
 }
