--- a/src/views/register/register.html
+++ b/src/views/register/register.html
@@ -58,71 +58,73 @@
 
 		<!-- 회원가입 폼(Form) -->
 		<div class="register-user-form-container">
-			<form class="box register-user-form-box" id="registerUserForm">
-				<p class="title is-5 has-text-primary">환영합니다!</p>
-				<div class="field">
-					<label class="label" for="fullNameInput">이름</label>
-					<div class="control">
-						<input
-							class="input"
-							id="fullNameInput"
-							type="text"
-							placeholder="유재석"
-							autocomplete="on"
-						/>
+			<form class="register-user-form-box" id="registerUserForm">
+				<p>회원가입</p>
+				<div class="inner">
+					<div class="field">
+						<label class="label" for="fullNameInput">이름</label>
+						<div class="control">
+							<input
+								class="input"
+								id="fullNameInput"
+								type="text"
+								placeholder="유재석"
+								autocomplete="on"
+							/>
+						</div>
+						<div class="failname-message hide">
+							이름은 2글자 이상이어야 합니다.
+						</div>
 					</div>
-					<div class="failname-message hide">
-						이름은 2글자 이상이어야 합니다.
+
+					<div class="field">
+						<label class="label" for="emailInput">이메일</label>
+						<div class="control">
+							<input
+								class="input"
+								id="emailInput"
+								type="email"
+								placeholder="abc@example.com"
+								autocomplete="on"
+							/>
+						</div>
+						<div class="failemail-message hide">이메일 형식이 맞지 않습니다.</div>
+						<div class="success-message hide">이메일 인증이 완료되었습니다.</div>
+						<button id="send-email-button" class="btn btn--gray">인증요청</button>
+					</div>
+
+					<div class="field">
+						<label class="label" for="passwordInput">비밀번호</label>
+						<div class="control">
+							<input
+								class="input"
+								id="passwordInput"
+								type="password"
+								placeholder="********"
+								autocomplete="off"
+							/>
+						</div>
+						<div class="failpass-message hide">
+							비밀번호는 4글자 이상이어야 합니다.
+						</div>
+					</div>
+
+					<div class="field mb-5">
+						<label class="label" for="passwordConfirmInput">비밀번호 확인</label>
+						<div class="control">
+							<input
+								class="input"
+								id="passwordConfirmInput"
+								type="password"
+								placeholder="********"
+								autocomplete="off"
+							/>
+						</div>
+						<div class="misspass-message hide">비밀번호가 일치하지 않습니다</div>
 					</div>
 				</div>
 
-				<div class="field">
-					<label class="label" for="emailInput">이메일</label>
-					<div class="control">
-						<input
-							class="input"
-							id="emailInput"
-							type="email"
-							placeholder="abc@example.com"
-							autocomplete="on"
-						/>
-					</div>
-					<div class="failemail-message hide">이메일 형식이 맞지 않습니다.</div>
-					<div class="success-message hide">이메일 인증이 완료되었습니다.</div>
-					<button id="send-email-button">인증요청</button>
-				</div>
-
-				<div class="field">
-					<label class="label" for="passwordInput">비밀번호</label>
-					<div class="control">
-						<input
-							class="input"
-							id="passwordInput"
-							type="password"
-							placeholder="********"
-							autocomplete="off"
-						/>
-					</div>
-					<div class="failpass-message hide">
-						비밀번호는 4글자 이상이어야 합니다.
-					</div>
-				</div>
-
-				<div class="field mb-5">
-					<label class="label" for="passwordConfirmInput">비밀번호 확인</label>
-					<div class="control">
-						<input
-							class="input"
-							id="passwordConfirmInput"
-							type="password"
-							placeholder="********"
-							autocomplete="off"
-						/>
-					</div>
-					<div class="misspass-message hide">비밀번호가 일치하지 않습니다</div>
-				</div>
-
-				<button class="button is-primary is-fullwidth" id="submitButton">
+				<button class="btn" id="submitButton">
 					회원가입하기
 				</button>
 			</form>
