--- a/src/views/products/products.html
+++ b/src/views/products/products.html
@@ -93,7 +93,9 @@
 		</header>
 
 		<section class="rankedproducts" id="rankedproducts">
-			<div class="inputProduct" id="inputProduct"></div>
+			<div class="inputProduct" id="inputProduct">
+				<div id="loading-box"><div class="lds-ring"><div></div></div></div>
+			</div>
 		</section>
 
 		<footer>footer</footer>
