--- a/src/views/payment/payment.css
+++ b/src/views/payment/payment.css
@@ -89,7 +89,6 @@
     flex-grow: 0;
     height: 3rem;
     line-height: 2rem;
-    padding-left: .5rem;
     text-align: left
 }
 
@@ -101,7 +100,7 @@
 }
 
 .select select {
-    color: rgba(0, 0, 0, .3);
+    color: rgba(0, 0, 0, .8);
     height: 100%;
     width: 100%
 }
@@ -117,7 +116,7 @@
 
 .delivery-info .field-body .control,
 .delivery-info .field-body .input {
-    height: 100%
+    height: 100%;
 }
 
 .delivery-info .custom-request {
