--- a/src/views/cart/cart.css
+++ b/src/views/cart/cart.css
@@ -1,3 +1,7 @@
+*{
+  margin: 0;
+  padding: 0;
+}
 li {
   list-style: none;
 }
@@ -224,7 +228,7 @@ input[type="checkbox"] {
   height: 100px;
   overflow: hidden;
   margin-left: 10px;
-  margin-right: 30px;
+
 }
 .product_img img{
   width: 100px;
@@ -237,6 +241,7 @@ input[type="checkbox"] {
   flex-direction: column;
   justify-content: space-between;
   align-items:flex-start;
+  margin-left: 30px;
 }
 
 .product_name{
@@ -363,4 +368,10 @@ input[type="checkbox"] {
 }
 .btn-item-buy {
   cursor: pointer;
+}
+
+@media (min-width: 320px) and (max-width: 1020px) {
+	.product_img{
+    display: none;
+  }
 }
