--- a/src/views/orderList/orderList.html
+++ b/src/views/orderList/orderList.html
@@ -17,6 +17,8 @@
 			href="https://fonts.googleapis.com/css2?family=Libre+Bodoni:wght@400;700&family=Nanum+Gothic:wght@400;700;800&family=Playfair+Display:wght@400;500;600;700;800;900&family=Prata&display=swap"
 			rel="stylesheet"
 		/>
+				<!-- sweetalert -->
+				<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 		<!-- IONICONS -->
 		<script
 			type="module"
